# cinema-invite-app

./: .gitmodules  DOCKER_COMMANDS.md  README.md  SETUP_SUMMARY.md  docker-compose.yml
.agent/skills/project_development/: SKILL.md
backend/: .gitignore  DATABASE_SETUP.md  Dockerfile  README.md  __init__.py  config.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  start.sh  test.db
backend/alembic/: env.py
backend/alembic/versions/: 6469a1b60a2c_init.py
backend/app/: config.py  controllers.py  crud.py  database.py  db.py  main.py  models.py  routes.py
backend/app/api/: __init__.py  auth.py  invitation.py  movie.py
backend/app/crud/: __init__.py  invitation.py  movie.py  user.py
backend/app/models/: __init__.py  invitation.py  movie.py  user.py
backend/app/schemas/: __init__.py  invitation.py  movie.py  user.py
backend/app/services/: __init__.py  movie_service.py
backend/app/utils/: auth.py  parser.py
backend/models/: Invitation.js  Movie.js
backend/routes/: invites.js
backend/scripts/: cinema_invite_db.sql  create_  create_invitations_table.sql  insert_data.py  insert_invitations_table.sql  insert_movies_data.py  truncate_invitations_table.sql
backend/utils/: mailer.js
