[tool.poetry]
name = "cinema-invite-app"
version = "0.1.0"
description = ""
authors = ["sangtv"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.80.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.25"
aiosqlite = "^0.20.0"
authlib = "^1.3.2"
httpx = "^0.27.2"
fastapi-sso = "^0.17.0"
poetry-dotenv = "0.3.0"
python-dotenv = "^1.0.1"
python-jose = "^3.4.0"
passlib = "^1.7.4"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"